--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,9 @@
   html {
     font-family: "comfortaa", Courier, monospace;
   }
+  html, body {
+    @apply bg-gray-50;
+  }
 }
 
 h1 {
@@ -23,6 +26,20 @@ h1 {
     text-sm font-semibold focus:outline-none 
     focus-visible:outline-2 focus-visible:outline-offset-2;
   }
+  
+  .btn-newsletter {
+    @apply inline-flex items-center 
+    justify-center  px-3 py-2.5
+    text-sm font-extrabold focus:outline-none 
+    focus-visible:outline-2 focus-visible:outline-offset-2;
+  }
+
+  .btn-red {
+    @apply bg-red-600 text-white hover:text-slate-100
+    hover:bg-red-500 active:bg-red-700 active:text-slate-200
+    focus-visible:outline-red-600
+  }
+
   .btn-outline {
     @apply inline-flex ring-1 items-center justify-center 
     rounded-md  text-sm focus:outline-none px-3.5 py-2.5
