--- a/app/globals.css
+++ b/app/globals.css
@@ -3,17 +3,21 @@
 
 @layer base {
   html {
-    font-family: "comfortaa", Courier, monospace;
+    font-family: "Comfortaa", Courier, monospace;
   }
   html, body {
     @apply bg-gray-50;
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
   }
 }
 
 h1 {
     font-weight: 600;
-    font-size: xx-large;
+    font-size: 1.875rem;
     font-family: 'comfortaa', Courier, monospace;
+    @apply mt-4 sm:mt-8;
 }
 
 
